--- a/DesingPatternsASP/appsettings.json
+++ b/DesingPatternsASP/appsettings.json
@@ -7,6 +7,9 @@
     },
     "AllowedHosts": "*",
     "MyConfig": {
-        "PathLog": "LogThread.txt"
+        "PathLog": "LogThread.txt",
+        "LocalPercentage": 0.20,
+        "ForeignPercentage": 0.30,
+        "ForeignExtra" : 20
     }
 }
