End Repository Pattern!

--- a/DesingPatternsASP/appsettings.json
+++ b/DesingPatternsASP/appsettings.json
@@ -10,6 +10,9 @@
         "PathLog": "LogThread.txt",
         "LocalPercentage": 0.20,
         "ForeignPercentage": 0.30,
-        "ForeignExtra" : 20
+        "ForeignExtra": 20
+    },
+    "ConnectionStrings": {
+        "Connection": "Server=(localdb)\\MSSQLLocalDB; Database=DesingPatterns;Trusted_Connection=True;"
     }
 }
