--- a/DesignPatterns.Models/DesignPatterns.Models.csproj
+++ b/DesignPatterns.Models/DesignPatterns.Models.csproj
@@ -1,10 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.9" />
@@ -12,12 +16,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\DesignPatterns.Models\DesignPatterns.Models.csproj" />
-    <ProjectReference Include="..\DesignPatterns.Repository\DesignPatterns.Repository.csproj" />
-    <ProjectReference Include="..\Tools\Tools\Tools.csproj" />
   </ItemGroup>
 
 </Project>
