--- a/Repository/Repository/Repository.csproj
+++ b/Repository/Repository/Repository.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,12 +13,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\DesignPatterns.Models\DesignPatterns.Models.csproj" />
-    <ProjectReference Include="..\DesignPatterns.Repository\DesignPatterns.Repository.csproj" />
-    <ProjectReference Include="..\Tools\Tools\Tools.csproj" />
   </ItemGroup>
 
 </Project>
